--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools~=67.0", "wheel"]
+requires = ["setuptools~=78.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
